corpus/cpp/coroutine/case-01/snapshots/gcc13_14/single_sink_structured/render.verbose.txt
error: [syntax] coroutine promise type error @ src/main.cpp:6:5
help: define a valid promise_type or align the coroutine return type with the coroutine body
raw : unable to find the promise type for this coroutine
| src/main.cpp:6:5
|     co_return;
|     ^
debug: rule_id=rule.family.coroutine.message_terms
debug: matched_conditions=message_contains=promise type, message_contains=coroutine, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output